# merutable

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  README.md
.github/workflows/: ci.yml
crates/merutable/: Cargo.toml
crates/merutable-capi/: Cargo.toml  build.rs  cbindgen.toml
crates/merutable-capi/examples/: smoke.c
crates/merutable-capi/include/: merutable.h
crates/merutable-capi/src/: db_fns.rs  error.rs  handle.rs  lib.rs  runtime.rs  types.rs
crates/merutable-capi/tests/: c_smoke.rs
crates/merutable-python/: Cargo.toml  pyproject.toml
crates/merutable-python/src/: convert.rs  lib.rs
crates/merutable/benches/: engine_compaction.rs  flush_dv_emission.rs  memtable_memtable.rs  parquet_bloom.rs
crates/merutable/proto/: manifest.proto
crates/merutable/src/: db.rs  mirror.rs  options.rs
crates/merutable/src/engine/: background.rs  cache.rs  codec.rs  config.rs  dv_resolve.rs  engine.rs  flush.rs  mod.rs  read_path.rs  stats.rs  write_path.rs
crates/merutable/src/engine/compaction/: iterator.rs  job.rs
crates/merutable/src/iceberg/: catalog.rs  manifest.rs  manifest_pb.rs  mod.rs  translate.rs
crates/merutable/src/memtable/: iterator.rs  manager.rs  memtable.rs  mod.rs  skiplist.rs
crates/merutable/src/parquet/: codec.rs  footer.rs  kv_index.rs  reader.rs  writer.rs
crates/merutable/src/replica/: mod.rs
crates/merutable/src/sql/: arrow.rs  datafusion_provider.rs  mod.rs
crates/merutable/src/store/: cached.rs  local.rs
crates/merutable/src/types/: error.rs  key.rs  schema.rs  value.rs
crates/merutable/src/wal/: batch.rs  manager.rs  reader.rs  writer.rs
crates/merutable/tests/: engine_background_worker_drop.rs  engine_ghost_rows_turbo.rs  engine_imp_regression.rs  engine_issue37_scan_gc_race.rs  engine_issue39_concurrent_ghost.rs  engine_issue39_concurrent_ghost_large.rs  iceberg_column_stats_e2e.rs  iceberg_forensic_catalog.rs  issue42_schema_mismatch_on_reopen.rs  issue44_add_column_api.rs  parquet_forensic_parquet.rs  replica_in_process_log_source.rs  replica_log_gap_recovery.rs  replica_rebase_hotswap_bounded.rs  replica_replica_compose.rs  replica_replica_tail.rs  sql_phase2c_pre_image.rs  stress_flush_dv.rs  types_proptest_key.rs
docs/: EXTERNAL_READS.md  MIRROR.md  SEMANTICS.md  TAXONOMY.md
docs/rfc/: 0001-full-rewrite-compaction.md  0002-flush-time-deletion-vectors.md
lab/: setup.sh
