[package]
name    = "merutable-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for merutable via PyO3"
license = "Apache-2.0"
publish = false

[lib]
name = "merutable"
crate-type = ["cdylib"]

[dependencies]
# Issue #38: workspace collapsed; PyO3 bindings now depend only
# on the consolidated `merutable` crate. Internal modules
# (`merutable::types`, `merutable::engine`) are re-exported as
# `pub mod` so existing PyO3 imports keep working.
merutable        = { path = "../merutable" }
pyo3             = { workspace = true }
tokio            = { workspace = true }
bytes            = { workspace = true }
