[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "merutable"
version = "0.1.0"
description = "Python bindings for merutable — an embeddable single-table engine with row + columnar Parquet and Iceberg-compatible metadata"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.maturin]
features = ["pyo3/extension-module"]
